hotfix: text overflow fix
:w

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,4 +3,5 @@
   min-width: 320px;
   background-color: #000;
   min-height: 100vh;
+  -webkit-font-smoothing: antialiased;
 }
