--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,9 +4,9 @@
   line-height: 1.14;
   font-weight: 500;
   padding: 0;
-  text-overflow: ellipsis;
   max-width: 336px;
   overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
@@ -14,6 +14,7 @@
   .profile__title {
     font-size: 27px;
     line-height: calc(33 / 27);
-    margin: 0 10px 8px 0;
+    margin: 0 10px 8px 25px;
+    max-width: calc(100vw - 38px);
   }
 }
